--- a/stats.html
+++ b/stats.html
@@ -2669,7 +2669,7 @@ var drawChart = (function (exports) {
   </script>
   <script>
     /*<!--*/
-    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"src","children":[{"uid":"6013-1","name":"avl.ts"},{"uid":"6013-3","name":"app.ts"}]}]}],"isRoot":true},"nodeParts":{"6013-1":{"renderedLength":4191,"gzipLength":0,"brotliLength":0,"mainUid":"6013-0"},"6013-3":{"renderedLength":266,"gzipLength":0,"brotliLength":0,"mainUid":"6013-2"}},"nodeMetas":{"6013-0":{"id":"\\src\\avl.ts","moduleParts":{"index.js":"6013-1"},"imported":[],"importedBy":[{"uid":"6013-2"}]},"6013-2":{"id":"\\src\\app.ts","moduleParts":{"index.js":"6013-3"},"imported":[{"uid":"6013-0"}],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
+    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"src/app.ts","uid":"5dc7-1"}]}],"isRoot":true},"nodeParts":{"5dc7-1":{"renderedLength":183,"gzipLength":0,"brotliLength":0,"mainUid":"5dc7-0"}},"nodeMetas":{"5dc7-0":{"id":"\\src\\app.ts","moduleParts":{"index.js":"5dc7-1"},"imported":[],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
 
     const run = () => {
       const width = window.innerWidth;
