--- a/stats.html
+++ b/stats.html
@@ -2669,7 +2669,7 @@ var drawChart = (function (exports) {
   </script>
   <script>
     /*<!--*/
-    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"src/app.ts","uid":"5dc7-1"}]}],"isRoot":true},"nodeParts":{"5dc7-1":{"renderedLength":183,"gzipLength":0,"brotliLength":0,"mainUid":"5dc7-0"}},"nodeMetas":{"5dc7-0":{"id":"\\src\\app.ts","moduleParts":{"index.js":"5dc7-1"},"imported":[],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
+    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"src/app.ts","uid":"4772-1"}]}],"isRoot":true},"nodeParts":{"4772-1":{"renderedLength":206,"gzipLength":0,"brotliLength":0,"mainUid":"4772-0"}},"nodeMetas":{"4772-0":{"id":"\\src\\app.ts","moduleParts":{"index.js":"4772-1"},"imported":[],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
 
     const run = () => {
       const width = window.innerWidth;
