--- a/stats.html
+++ b/stats.html
@@ -2669,7 +2669,7 @@ var drawChart = (function (exports) {
   </script>
   <script>
     /*<!--*/
-    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"src/app.ts","uid":"4772-1"}]}],"isRoot":true},"nodeParts":{"4772-1":{"renderedLength":206,"gzipLength":0,"brotliLength":0,"mainUid":"4772-0"}},"nodeMetas":{"4772-0":{"id":"\\src\\app.ts","moduleParts":{"index.js":"4772-1"},"imported":[],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
+    const data = {"version":2,"tree":{"name":"root","children":[{"name":"index.js","children":[{"name":"node_modules/tslib/tslib.es6.js","uid":"07a4-1"},{"name":"src","children":[{"uid":"07a4-3","name":"currying.ts"},{"uid":"07a4-5","name":"app.ts"}]}]}],"isRoot":true},"nodeParts":{"07a4-1":{"renderedLength":1647,"gzipLength":0,"brotliLength":0,"mainUid":"07a4-0"},"07a4-3":{"renderedLength":1060,"gzipLength":0,"brotliLength":0,"mainUid":"07a4-2"},"07a4-5":{"renderedLength":205,"gzipLength":0,"brotliLength":0,"mainUid":"07a4-4"}},"nodeMetas":{"07a4-0":{"id":"\\node_modules\\tslib\\tslib.es6.js","moduleParts":{"index.js":"07a4-1"},"imported":[],"importedBy":[{"uid":"07a4-2"}]},"07a4-2":{"id":"\\src\\currying.ts","moduleParts":{"index.js":"07a4-3"},"imported":[{"uid":"07a4-0"}],"importedBy":[{"uid":"07a4-4"}]},"07a4-4":{"id":"\\src\\app.ts","moduleParts":{"index.js":"07a4-5"},"imported":[{"uid":"07a4-2"}],"importedBy":[],"isEntry":true}},"env":{"rollup":"2.70.1"},"options":{"gzip":false,"brotli":false,"sourcemap":false}};
 
     const run = () => {
       const width = window.innerWidth;
